responsive fixed and links icon wrapping fixed

--- a/packages/client/src/components/Navigation/Navbar.css
+++ b/packages/client/src/components/Navigation/Navbar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
 header,
-header > * {
+header>* {
   box-sizing: border-box;
 }
 
@@ -11,12 +11,10 @@ header > * {
   left: 0;
   width: 100%;
   height: 6rem;
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       rgba(28, 56, 64, 0.7) 0%,
       rgba(28, 65, 64, 0.7) 0.01%,
-      rgba(28, 65, 64, 0.7) 100%
-    ),
+      rgba(28, 65, 64, 0.7) 100%),
     url('../../../public/assets/images/concrete-bw.png');
   background-repeat: repeat;
   font-family: 'Open Sans';
@@ -59,53 +57,56 @@ header > * {
 }
 
 .logo a,
-.navbar-link,
-.nav-icon-placeholder {
+.navbar-link {
   font-weight: 600;
   color: rgba(255, 255, 255, 1);
 }
 
+.user-name-container,
+.log-in-container,
+.log-out-container,
+.favourite-container,
 .navbar-links-container {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: flex-end;
+}
+
+.navbar-links-container {
   gap: 2rem;
 }
 
 .navbar-link {
   font-size: 1.25rem;
   text-decoration: none;
-}
-
-.nav-icon-placeholder {
-  aspect-ratio: 1/1;
-  height: 2rem;
-  border: 1px solid rgba(255, 255, 255, 1);
   display: flex;
-  align-items: center;
+  align-items: center
 }
 
-.nav-icon-placeholder,
-.mobile-open-btn {
-  font-size: 0.9rem;
-  font-weight: 400;
+.navbar-icon {
+  aspect-ratio: 1/1;
+  margin-right: 0.3125rem;
 }
 
 .mobile-open-btn {
+  font-size: 2.5rem;
+  color: rgba(255, 255, 255, 1);
+  border: none;
   background: transparent;
   padding: 0;
   z-index: 999;
   cursor: pointer;
 }
 
-.user-name-container,
-.log-in-container,
-.log-out-container,
-.favourite-container {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.mobile-open-btn,
+.mobile-open-btn span {
+  line-height: 1;
 }
+
+.mobile-open-btn.open {
+  font-size: 4rem;
+}
+
 
 .hide,
 .mobile-open-btn {
@@ -116,11 +117,21 @@ header > * {
   .navigation-bar-container {
     width: 90vw;
   }
+
+  .navbar-links-container {
+    gap: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 1230px) {
-  .navbar-link {
+
+  .navbar-links-container>.navbar-link,
+  .navbar-link span {
     display: none;
+  }
+
+  .navbar-icon {
+    margin-right: 0;
   }
 
   .navigation-bar-container {
@@ -132,7 +143,11 @@ header > * {
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 650px) {
+  .navigation-bar {
+    height: 4.5rem;
+  }
+
   .navigation-bar-container {
     height: calc(100% - 0.5rem);
   }
@@ -140,10 +155,54 @@ header > * {
   .navigation-bar::after {
     height: 0.5rem;
   }
+
+  .navbar-links-container {
+    gap: 1rem;
+  }
+
+  .logo a {
+    font-size: 1.3rem;
+    text-underline-offset: 0.3rem;
+  }
+
+  .navbar-icon {
+    height: 2.3rem;
+  }
+
+  .mobile-open-btn {
+    font-size: 2.3rem;
+  }
+
+  .mobile-open-btn.open {
+    font-size: 3.6rem;
+  }
 }
 
 @media screen and (max-width: 490px) {
   .navbar-links-container {
-    gap: 1rem;
+    gap: 0.5rem;
+  }
+
+  .navbar-icon {
+    height: 2rem;
+  }
+
+  .mobile-open-btn {
+    font-size: 2rem;
+  }
+
+  .mobile-open-btn.open {
+    font-size: 3.1rem;
+  }
+
+  .logo a {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+
+  .logo a {
+    font-size: 1rem;
   }
 }
